
2022-05-11  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_get_sign_ascii, cob_put_sign_ascii, cob_put_sign_ebcdic):
	  skip sign-adjustment if data is already without/with sign
	* common.c (cob_put_sign_ebcdic): invalid data for negative sign is now
	  converted to -0 instead of +0
	* strings.c (cob_inspect_init_common): extracted from cob_inspect_init
	* strings.c (cob_inspect_converting): reordered code, so inspect_mark
	  is no longer needed
	* strings.c (cob_inspect_init_common): extracted from cob_inspect_init
	* strings.c (cob_inspect_init_converting), common.h: new stripped down
	  variant of cob_inspect_init
	* strings.c (cob_inspect_converting): changed conversion to be based
	  on pre-computed conversion tables, improving performance a lot

2022-04-11  Simon Sobisch <simonsobisch@gnu.org>

	* strings.c (inspect_find_data): extracted from cob_inspect_before /
	  cob_inspect_after
	* strings.c (cob_inspect_characters): use (is_marked) to count/replace
	  all characters at once when possible
	* strings.c (inspect_common, cob_inspect_characters,
	  cob_inspect_converting): early exit if nothing to inspect
	* strings.c (cob_init_strings, cob_inspect_init, cob_unstring_init):
	  don't pre-allocate inspect_mark, inspect_repdata, dlm_list but
	  allocate with minimal default size on first use

2022-04-08  Simon Sobisch <simonsobisch@gnu.org>

	* strings.c (do_mark, is_marked): extracted from inspect_common
	* strings.c (set_inspect_mark): new function to remember actual min/ma
	  positions of the marker bytes to remove the need to initialize huge
	  areas when we commonly have set only markers in the first n bytes
	  (or nothing), especially for INSPECT LEADING/TRAILING
	* strings.c (cob_inspect_init, cob_inspect_characters, is_marked): use of
	  the now definitive check "did we mark anything" instead of checking all
	  marker bytes by testing for "inspect_mark[inspect_mark_min] != 0"
	* strings.c (is_marked): check for possible/definitel overlap of